update involvement content

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4><a href="https://www.instagram.com/uc.kcdc/">UC KCDC</a></h4>
-	   					<p>Dancer at Classick from UC KCDC.</p>
+	   					<p>Dancer at Classick from UC KCDC, taking part in <a href="https://www.youtube.com/watch?v=PJ5GA-yojl0&list=RDPJ5GA-yojl0&start_radio=1&pp=ygUOa2NkYyBiYXR0ZXIgdXCgBwE%3D">Batter Up - Baby Monster</a> cover.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -238,7 +238,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>BMI Lab</h4>
-	   					<p>Undergraduate Research Assistant at BMI Lab.<br> Advisor: Professor Jun Bai</p>
+	   					<p>Undergraduate Research Assistant at BMI Lab, working on Protein-Protein interaction.<br> Advisor: Professor Jun Bai</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -256,7 +256,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4><a href="https://www.instagram.com/ucvisa/">UC VISA</a></h4>
-	   					<p>Program Coordinator at UC Vietnamese International Student Association.</p>
+	   					<p>Program Coordinator at UC Vietnamese International Student Association, organizing events and activities for the Vietnamese student community.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -274,7 +274,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4><a href="https://revolutionuc.com">Revolution UC</a></h4>
-	   					<p>Web Developer in Web Team at RevUC.</p>
+	   					<p>Web Developer in Web Team at RevUC, maintaining website and updating content for University of Cincinnati's largest Hackathon.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -292,7 +292,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Langsam Library</h4>
-	   					<p>Student assistant at Langsam Library.</p>
+	   					<p>Student assistant at Langsam Library, assisting patrons at front desk with cataloging and organizing materials, managing requests for OhioLINK and Interlibrary Loan (ILL).</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
