update honors experiences

--- a/index.html
+++ b/index.html
@@ -366,16 +366,16 @@
 		<div id="modal-08" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-guestinme_app.png" alt="GuestInMe App" />
+				     		<img src="images/portfolio/honors1.jpg" alt="GuestInMe App" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>GuestInMe Nightlife App</h4>		      
-					      <p>GuestInMe Nightlife App made using Flutter and Firebase.</p>
-					      <div class="categories">Flutter App Development</div>			               
+					      <h4>Transition Student Welcome</h4>		      
+					      <p>The Transition Student Welcome was my first formal introduction to the University Honors Program and to the community that would shape much of my first year at UC. As a new international student arriving from Vietnam, this event was especially meaningful because it was my first opportunity to connect with other honors students, hear their stories, and begin to imagine my own place within UHP. During the event, I participated in student panels, learned about honors pathways, and spoke with peers who were navigating similar transitions.<br>
+						What made this experience impactful was not just the information I received, but the sense of belonging it created. Hearing older honors students talk honestly about their challenges, growth, and goals helped me redefine what it means to be a Global Citizen Scholar. I realized that being global is not only about traveling or studying abroad, but about listening to diverse perspectives, learning from others’ experiences, and contributing thoughtfully to a shared academic community. This event helped me see UHP not as an abstract program, but as a network of people who support, challenge, and inspire one another.</p>
+					      <div class="categories">My first event</div>			               
 					   </div>
 			         <div class="link-box">
-			            <a href="https://onelink.to/guestinme">App</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>
                 </div> <!-- /modal-08 -->
@@ -386,9 +386,9 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Show World Film Directory App</h4>		      
-					      <p>Show World Film Directory App made using Flutter and Firebase.</p>
-					      <div class="categories">Flutter App Development</div>			               
+					      <h4>abcd</h4>		      
+					      <p>abcd</p>
+					      <div class="categories">abcd</div>			               
 					   </div>
 			         <div class="link-box">
 			            <a href="https://play.google.com/store/apps/details?id=com.showworld.showworldfilmdirectory">App</a>
